--- a/package.json
+++ b/package.json
@@ -11,7 +11,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cpf-cnpj-validator": "^1.0.3",
     "express": "^4.18.1",
-    "nodemon": "^2.0.16"
+    "express-handlebars": "^6.0.5",
+    "express-session": "^1.17.2",
+    "multer": "^1.4.4",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.16",
+    "sequelize": "^6.19.0",
+    "validator": "^13.7.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.14.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "prettier": "2.6.2"
   }
 }
