--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
+.idea/
+.vscode/
 node_modules/
+build/
+temp/
+.env
+coverage
+ormconfig.json
+dist
+estruturaDePastas.txt
+
+uploads/*
+!uploads/.gitkeep
+
+anotacoesLinux
