--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "test": "echo \"Error: no test specified\" &amp;&amp; exit 1",
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts",
     "lint": "eslint . --ext .ts",
-    "lint-fix": "eslint . --ext .ts --fix",
-    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
+    "lint-fix": "eslint . --ext .ts --fix"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -19,18 +18,19 @@
     "eslint": "^8.15.0",
     "eslint-config-prettier": "6.15.0",
     "eslint-plugin-prettier": "3.2.0",
+    "prisma": "^3.14.0",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^4.0.0",
     "typescript": "^4.6.4"
   },
   "dependencies": {
+    "@prisma/client": "^3.14.0",
     "@types/cors": "^2.8.12",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "pg": "^8.7.3",
     "prettier": "^2.6.2",
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.6"
+    "reflect-metadata": "^0.1.13"
   }
 }
