--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.34",
     "@types/validator": "^13.7.2",
     "@typescript-eslint/eslint-plugin": "^5.24.0",
@@ -32,6 +33,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "prettier": "^2.6.2",
     "reflect-metadata": "^0.1.13",
