--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.34",
     "@types/validator": "^13.7.2",
@@ -30,6 +31,7 @@
     "@prisma/client": "^3.14.0",
     "@types/cors": "^2.8.12",
     "bcryptjs": "^2.4.3",
+    "celebrate": "^15.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
