--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^4.17.13",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/multer": "^1.4.7",
     "@types/node": "^17.0.34",
     "@types/validator": "^13.7.2",
     "@typescript-eslint/eslint-plugin": "^5.24.0",
@@ -36,6 +37,7 @@
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.7.3",
     "prettier": "^2.6.2",
     "reflect-metadata": "^0.1.13",
